tests/call/string.rz
"foo"() // error: only functions and structures are callable